codama-macros/tests/codama_attribute/values_nodes/argument_value_node/invalid_name.fail.rs
use codama_macros::codama;

#[codama(default_value = argument(42))]
pub struct TestWithInteger;

#[codama(default_value = argument(banana))]
pub struct TestWithPath;

#[codama(default_value = argument(banana = "authority"))]
pub struct TestWithWrongKey;

fn main() {}
